syntax = "proto3";

package auth_proto.v1;
option go_package = "/";

service auth{
  rpc AuthLogin(PostAuthLoginRequest) returns (PostAuthLoginResponse) {}
  rpc AuthVerifyCode(PostAuthVerifyCodeRequest) returns (PostAuthVerifyCodeResponse) {}
  rpc AuthRefresh(PostAuthRefreshRequest) returns (PostAuthRefreshResponse) {}
}

message PostAuthLoginRequest{
  string Code = 1;
  int64 TelegramId = 2;
  string FirstName = 3;
  string UserName = 4;
}

message PostAuthLoginResponse{
  bool Status = 1;
}


message PostAuthVerifyCodeRequest{
  string Code = 1;
}

message PostAuthVerifyCodeResponse{
  bool Status = 1;
  string AccessToken = 2;
  string RefreshToken = 3;
}


message PostAuthRefreshRequest{
  string RefreshToken = 1;
}

message PostAuthRefreshResponse{
  string RefreshToken = 1;
  string AccessToken = 2;
}
